[metadata]
name = ukbb_qc
version = 0.0.1
long_description = file: README.md
long_description_content_type = text/markdown
classifiers =
    Topic :: Scientific/Engineering :: Bio-Informatics
    Intended Audience :: Science/Research
    Programming Language :: Python :: 3

[options]
packages = find:
python_requires = >=3.6
include_package_data = True
